<resources>
    <string name="app_name">RestauMap</string>
    <string name="restaurant_menu">RestaurantMenu</string>
    <string name="title_activity_maps"></string>
    <string name="signup_now">Signup now</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="todo">TODO</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hello_world">Tap two locations in the map</string>
    <string name="str_tv_distance_time">Distance</string>

</resources>